# opcua-wrapper-server

./: README.md
server/: Cargo.toml  config.json  crawler.json  server.yaml
server/pki/own/: cert.der
server/pki/private/: private.pem
server/pki/rejected/: dataFEEDOpcUaClient [39317dba182f9638fbdb6c599731c7d767080f7b].der
server/schemas/: example.json  test_data_provider.json
server/src/: main.rs
server/src/crawler/: control.rs  mod.rs  read.rs  test_data_provider.rs
server/src/schema/: control.rs  mod.rs  read.rs
test-data-provider/: go.mod  main.go
