[package]
name = "server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opcua-server = "0.8.0"
chrono = "0.4"
log = "0.4"
opcua-console-logging = "0.8.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[dependencies.async-std]
version = "1.10.0"

[dependencies.futures]
version = "0.3.17"

[dependencies.surf]
version = "2.3.1"
features = ["hyper-client", "encoding"]